<resources>
    <string name="app_name">Data4Help: User</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="don_t_you_have_an_account_yet_register_here">Don\'t you have an account yet? Register here.</string>
    <string name="personal_details">Personal Details</string>
    <string name="fiscal_code">Fiscal Code*</string>
    <string name="surname">Surname*</string>
    <string name="name">Name*</string>
    <string name="address">Address*</string>
    <string name="birthday">Year Of Birth: yyyy*</string>
    <string name="sex">Sex*</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="personal_account">Personal Account</string>
    <string name="e_mail_reg">E-mail*</string>
    <string name="password_reg">Password*</string>
    <string name="i_accept_the_regulatory_policy">I accept the regulatory policy</string>
    <string name="register">Register</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Data4Help</string>
    <string name="nav_header_subtitle">@string/e_mail</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="health_parameters">Health Parameters</string>
    <string name="heart_beat">Heart Beat</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="height_cm">Height: --- cm</string>
    <string name="weight_kg">Weight: --- kg</string>
    <string name="bpm">-- bpm</string>
    <string name="third_parties_using_my_data">Third Parties Using my Data</string>
    <string name="automated_sos">Automated SOS</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General content_settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example content_settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example content_settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="wearable_devices">Wearable Devices</string>
    <string name="street">Street*</string>
    <string name="number">Number*</string>
    <string name="city">City*</string>
    <string name="cap">CAP*</string>
    <string name="region">Region*</string>
    <string name="country">Country*</string>
    <string name="save">Save</string>
    <string name="notification_request">Get notification</string>

    <string name="min_bpm">Min bpm</string>
    <string name="average_bpm">Average</string>
    <string name="max_bpm">Max bpm</string>
    <string name="xxx">---</string>
    <string name="min_pressure">Min pressure</string>
    <string name="max_pressure">Max pressure</string>
    <string name="min_temperature">Min Temp</string>
    <string name="max_temperature">Max Temp</string>

    <string name="refuse">Refuse</string>
    <string name="subscribe">Accept</string>
    <string name="dialog_title">Data Request</string>
    <string name="alert_title">Alert</string>

    //URL DOMAIN
    <string name="domain">192.168.1.110</string>

</resources>
