<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.data4help.data4help1.activity.MenuActivity"
    tools:showIn="@layout/app_bar_main">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="149dp"
        android:layout_height="294dp"
        android:layout_marginEnd="-10dp"
        android:src="@drawable/picture0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="180dp"
        android:layout_height="376dp"
        android:layout_marginTop="332dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/picture1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp"
        android:text="@string/health_parameters"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:text="@string/heart_beat"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/hour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hour"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/heart_beat"
        android:textSize="15sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/gridLayout"
        android:layout_height="50dp"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/healthFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:background="@drawable/button_shape_1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/weekButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/week"
            android:background="@drawable/button_shape_1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/monthButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:background="@drawable/button_shape_1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/yearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:background="@drawable/button_shape_1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat"/>
    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/healthFragment"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="19dp"
        android:text="@string/weight_kg"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="35dp"
        android:text="@string/height_cm"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>