<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.data4help.data4help1.activity.MenuActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="120dp"
            android:textAlignment="center"
            android:text="@string/min_bpm"
            android:textStyle="italic | bold"
            android:textSize="18sp"/>

        <TextView
            android:layout_height="match_parent"
            android:layout_width="150dp"
            android:textAlignment="center"
            android:text="@string/average_bpm"
            android:textStyle="italic | bold"
            android:textSize="18sp"/>

        <TextView
            android:layout_height="match_parent"
            android:layout_width="120dp"
            android:textAlignment="center"
            android:text="@string/max_bpm"
            android:textStyle="italic | bold"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/minMonthBpm"
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/health_param_shape"
            android:text="@string/xxx"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/averageMonthBpm"
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/health_param_shape"
            android:text="@string/xxx"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/maxMonthBpm"
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/xxx"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/health_param_shape"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="55dp"
            android:text="@string/min_pressure"
            android:textStyle="italic | bold"
            android:textSize="18sp"/>

        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:text="@string/max_pressure"
            android:textStyle="italic | bold"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/minMonthPressure"
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/health_param_shape"
            android:text="@string/xxx"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/maxMonthPressure"
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/health_param_shape"
            android:text="@string/xxx"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="35dp"
            android:text="@string/min_temperature"
            android:textStyle="italic | bold"
            android:textSize="18sp"/>

        <TextView
            android:layout_height="match_parent"
            android:layout_width="170dp"
            android:textAlignment="center"
            android:text="@string/max_temperature"
            android:textStyle="italic | bold"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/minMonthTemperature"
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/health_param_shape"
            android:text="@string/xxx"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/maxMonthTemperature"
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/health_param_shape"
            android:text="@string/xxx"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>